--- a/05 - Intensivão/style.css
+++ b/05 - Intensivão/style.css
@@ -168,3 +168,88 @@ footer p {
     font-size: 1.9rem;
 }
 
+@media (min-width: 1100px) {
+    .container {
+        width: 144rem;
+    }
+    
+    header {
+        display: grid;
+        grid-template-areas: 
+        "A B";
+    }
+
+    header > img {
+        grid-area: B;
+        width: 72rem;
+        height: 73.2rem;
+    }
+
+    header .title {
+        margin-top: 31.2rem;
+    }
+
+    header h1 {
+        font-size: 5.8rem;
+    }
+
+    header p {
+        font-size: 3.2rem;
+        justify-self: left;
+        padding-left: 50px;
+    }
+
+    header button {
+        display: flex;
+        margin-top: 15rem;
+        padding-left: 50px;
+    }
+
+    main .planets {
+        display: grid;
+        grid-template-columns: repeat(3, 36.6rem);
+        height: 44.8rem;
+        width: 121.8rem;
+        margin: auto;
+    }
+
+    main h2 {
+        font-size: 3.5rem;
+    }
+
+    main p {
+        font-size: 1.9rem;
+    }
+
+    aside {
+        width: 59.5rem;
+        display: flex;
+        gap: 16.2rem;
+        height: 61.2rem;
+        padding-left: 10.9rem;
+        position: relative;
+    }
+
+    aside h2 {
+        font-size: 4.2rem;
+    }
+
+    aside #messenge, input {
+        width: 59.2rem;
+    }
+
+    aside .stars {
+        width: 64.4rem;
+        height: 61.2rem;
+        position: absolute; 
+        top: 0;
+        right: -844px;
+    }
+
+    aside img {
+       
+    }
+
+    footer {}
+}
+
