--- a/05 - Intensivão/style.css
+++ b/05 - Intensivão/style.css
@@ -49,6 +49,19 @@ header p {
 header button {
     border: none;
     background-color: white;
+    transition: filter 300ms;
+}
+
+header button:hover {
+    transform: scale(1.1);
+    transition: 500ms;
+    cursor: pointer;
+}
+
+main .planet-wrapper:hover {
+    transform: scale(1.1);
+    transition-duration: 500ms;
+    cursor: pointer;
 }
 
 main {
@@ -81,6 +94,8 @@ main .planet-wrapper p {
 
 aside {
     padding: 7rem 4rem;
+    width: 100%;
+    height: 100%;
 }
 
 aside h2 {
@@ -144,13 +159,7 @@ aside button {
     color: white;
     font-size: 1.4rem;
     font-weight: bold;
-}
-
-.stars {
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    position: absolute;
+    cursor: pointer;
 }
 
 footer {
@@ -168,7 +177,7 @@ footer p {
     font-size: 1.9rem;
 }
 
-@media (min-width: 1100px) {
+@media (min-width: 1440px) {
     .container {
         width: 144rem;
     }
@@ -222,12 +231,15 @@ footer p {
     }
 
     aside {
-        width: 59.5rem;
         display: flex;
-        gap: 16.2rem;
-        height: 61.2rem;
-        padding-left: 10.9rem;
-        position: relative;
+        align-items: center;
+        gap: 9.2rem;
+        height: 62.2rem;
+        padding: 0;
+        margin: 0 auto;
+        background: url(Projeto\ -\ 01/./assets/starsv.svg);
+        background-repeat: no-repeat;
+        background-position: right;
     }
 
     aside h2 {
@@ -237,19 +249,4 @@ footer p {
     aside #messenge, input {
         width: 59.2rem;
     }
-
-    aside .stars {
-        width: 64.4rem;
-        height: 61.2rem;
-        position: absolute; 
-        top: 0;
-        right: -844px;
-    }
-
-    aside img {
-       
-    }
-
-    footer {}
 }
-
