--- a/Prática/Praticando/style.css
+++ b/Prática/Praticando/style.css
@@ -11,11 +11,13 @@
 body {
     font-size: 1.6rem;
     background-color: gray;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 header {
     background-color: black;
-    padding: 0 20rem;
 }
 
 header nav {
@@ -32,6 +34,10 @@ a {
     text-decoration: none;
     color: chartreuse;
     margin: 3rem;
+}
+
+#app {
+    height: 50vh;
 }
 
 #timer, #text {
@@ -69,4 +75,63 @@ a {
     } 100% {
         transform: translate(-100%);
     }
+}
+
+
+/* Comprar */
+
+.mainBuy {
+    display: flex;
+    place-content: center;
+    flex-direction: column;
+    width: 30rem;
+    margin: 2rem auto;
+}
+
+.buyTitle {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: mediumblue;
+}
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+.inputItem {
+    margin: 1.5rem 0;
+    padding: 1rem;
+    border-radius: .6rem;
+    border: none;
+}
+
+.addItem {
+    width: 10rem;
+    background-color: yellow;
+    border: none;
+    border-radius: .6rem;
+    padding: 1rem;
+    cursor: pointer;
+    font-weight: bold;
+    color: darkblue;
+}
+
+.my-list {
+    margin-top: 3rem;
+}
+
+.my-list li {
+    font-size: 2rem;
 }
