--- a/Prática/Praticando/style.css
+++ b/Prática/Praticando/style.css
@@ -88,7 +88,7 @@ a {
     margin: 2rem auto;
 }
 
-.buyTitle {
+.buyTitle, .imcTitle {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: mediumblue;
 }
@@ -117,7 +117,7 @@ form {
     border: none;
 }
 
-.addItem {
+.addItem, .calcImc {
     width: 10rem;
     background-color: yellow;
     border: none;
@@ -134,4 +134,44 @@ form {
 
 .my-list li {
     font-size: 2rem;
+}
+
+/* IMC */
+
+.containerImc {
+    display: flex;
+    place-content: center;
+    flex-direction: column;
+    width: 30rem;
+    margin: 2rem auto;
+
+}
+
+.containerImc h1 {
+    margin-bottom: 2rem;
+}
+
+.input-wrapper input {
+    width: 30rem;
+    padding: 1rem;
+    border-radius: .6rem;
+    border: none;
+}
+
+.input-wrapper + .input-wrapper {
+    margin: 1rem 0;
+}
+
+.modal {
+    width: fit-content;
+    background-color: aliceblue;
+    padding: 4rem;
+    margin-top: 3rem;
+    border-radius: .4rem;
+}
+
+.hide {
+    display: none;
+    visibility: hidden;
+    opacity: none;
 }
