--- a/Prática/Praticando/style.css
+++ b/Prática/Praticando/style.css
@@ -38,6 +38,20 @@ a {
 
 #app {
     height: 50vh;
+    width: 100%;
+}
+
+.homeIn {
+    padding: 5rem;
+    font-size: 2rem;
+    color: bisque;
+    line-height: 3rem;
+    margin-top: 10rem;
+}
+
+.homeIn p {
+    text-indent: 4rem;
+    text-align: justify;
 }
 
 #timer, #text {
@@ -175,3 +189,20 @@ form {
     visibility: hidden;
     opacity: none;
 }
+
+/* Contact */
+
+.contactNav {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 20rem auto;
+    padding-left: 10rem;
+    gap: 1rem;
+}
+
+.contactNav h1 {
+    font-size: 4rem;
+    color: blue;
+}
+
