--- a/07 - Javascript antes do framework/02 - Avançando nas promisses/02 - GitFav/style.css
+++ b/07 - Javascript antes do framework/02 - Avançando nas promisses/02 - GitFav/style.css
@@ -5,35 +5,43 @@
 }
 
 :root {
-    font-size: clamp(30%, 1% + 1vw, 62.5%);
+    font-size: clamp(10%, 1% + .9vw, 62.5%);
 }
 
 body {
     font-size: 1.6rem;
     background-color: #000000;
-    padding: 3rem;
+    padding: 11.5rem 16rem;
+    color: white;
+   
 }
 
-label .sr-only {
+.sr-only {
     position: absolute;
-    width: 1px; 
-    height: 1px; 
-    padding: 0; 
-    margin: -1px; 
-    overflow: hidden; 
-    clip: rect(0, 0, 0, 0); 
-    border: 0;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
+    visibility: none;
 }
 
 #app {
-    margin: 11.5rem auto;
+    margin: 0 auto;
+    padding: 2rem;
     width: 100%;
 }
 
 header {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    
+
+    margin-bottom: 8.7rem;
 }
 
 header img {
@@ -48,6 +56,7 @@ form {
 
 form input {
     background-color: #06181C;
+    color: white;
     width: 46.2rem;
     height: 4.8rem;
     padding-left: 1.6rem;
@@ -91,5 +100,31 @@ header button:hover {
     background-size: 2.4rem 2.4rem;
     color: #065E7C;
     background-color: white;
+}
+
+table {
+    margin: auto;
+    width: 100%;
+}
+
+table tr {
+    text-align: left;
+}
+
+table tbody .user {
+    display: flex;
+    gap: 1.6rem;
+    align-items: center;
+    width: 50rem;
+}
+
+table tbody .repositories {
+    
+}
+
+table tbody img {
+    border-radius: 50%;
+    width: 5.6rem;
+    height: 5.6rem;
 }
 
